--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -23,3 +23,11 @@
         }
     }
 }
+
+.tab-content {
+
+    & .card {
+        margin: auto;
+    }
+
+}
