--- a/sass/_solutions.scss
+++ b/sass/_solutions.scss
@@ -8,4 +8,10 @@
     background-size: cover;
     background-attachment: fixed;
 
+    @media screen and (max-width: 758px) {
+        & {
+            height: auto;
+            padding: 1rem 1rem;
+        }
+    }
 }
